# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./users";
 export * from "./objects";
 export * from "./observations";
+export * from "./annotations";
